--- a/src/app/certificates/certificates.component.html
+++ b/src/app/certificates/certificates.component.html
@@ -10,7 +10,7 @@
         font-size: 1.5em; 
         color: #333;
       ">
-    Certificaciones
+    Certificacion
   </h2>
 
   <ul style="list-style: none; margin: 0; padding: 0;">
