--- a/src/app/certificates/certificates.component.html
+++ b/src/app/certificates/certificates.component.html
@@ -10,7 +10,7 @@
         font-size: 1.5em; 
         color: #333;
       ">
-    Certificacion
+    Certificación
   </h2>
 
   <ul style="list-style: none; margin: 0; padding: 0;">
@@ -26,16 +26,20 @@
       "
     >
       <div style="font-weight: bold; color: #007ACC;">
-        {{ cert.title }}
+        <!-- Ahora el nombre del curso es un enlace, NO se muestra el link -->
+        <a
+          [href]="cert.url"
+          target="_blank"
+          rel="noopener noreferrer"
+          style="color: inherit; text-decoration: none;"
+        >
+          {{ cert.title }}
+        </a>
         <span style="font-weight: normal; color: #555;">
           ({{ cert.year }})
         </span>
       </div>
-      <div style="margin-top: 5px; color: #555;">
-        {{ cert.description }}
-      </div>
     </li>
   </ul>
 </div>
-
 
